--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="add_title_here">Add Title Here</string>
     <string name="dot">.</string>
     <string name="time">00:00</string>
+    <string name="search_recording_hint">Search recordings</string>
 
 
 </resources>
