--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="dummy_date">Mon, 12 Aug 2024, 16:00</string>
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
+    <string name="create_account">Create an account</string>
+    <string name="welcome_please">Welcome Please enter your detail</string>
+    <string name="name">Name</string>
+    <string name="user_name_hint">Enter your name</string>
 
 
 </resources>
