--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="welcome_please">Welcome Please enter your detail</string>
     <string name="name">Name</string>
     <string name="user_name_hint">Enter your name</string>
+    <string name="continue_email">Continue with email</string>
 
 
 </resources>
