--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="user_name_hint">Enter your name</string>
     <string name="continue_email">Continue with email</string>
     <string name="your_email">What\'s your email?</string>
-    <string name="require_information">"We require this information to either access your existing account or to set up new account  "</string>
+    <string name="require_information">"We require this information to either access your existing account or to set up a new one"</string>
     <string name="enter_email">Enter your email</string>
     <string name="next">Next</string>
     <string name="enter_name_below">"Enter your name below so friends can find you  "</string>
@@ -44,11 +44,13 @@
     <string name="password_char">Minimum 8 characters, with at least 1 uppercase, 1 lowercase, and 1 number required</string>
     <string name="choose_password">Choose a Pasward</string>
     <string name="verify_email">Verify your email address </string>
-    <string name="sent_email">We have sent you an email</string>
-    <string name="use_app">To use our app click on the email verification link sent \n to you on <b>userinfo@gmail.com</b> and click the \n<b>Conform Email Address</b>   button</string>
+    <string name="sent_email">We,ve sent you an OTP on your email</string>
+    <string name="use_app">To use our app check the OTP we have sent to you on <b>userinfo@gmail.com</b> </string>
     <string name="send_again">Send Again</string>
-    <string name="not_recieve">Didn\'t receive the email yet?</string>
+    <string name="not_recieve">Didn\'t receive the OTP yet?</string>
     <string name="open_email">Open email app</string>
+    <string name="summary_keyword">Summary  Keywords</string>
+    <string name="enter_address">Email Address</string>
 
 
 </resources>
